# ev_scheduling_dp

./: .gitignore  Makefile  README.md  create_test_data.ipynb  create_test_data_with_charging.ipynb  environment.yml  main_slice_cs.py  main_slice_cs_latest.py  pyproject.toml  run_dylan_comparison.sh  scheduling_CS  scheduling_CS.c  scheduling_CS.h  scheduling_main.c  scheduling_v6_notes.c  test_compilation.py  unify_data.ipynb
cloe_code/: Distributions_nyc.ipynb  Pre_processing_nyc.ipynb  main_slice.py  nyc_extract.ipynb
cloe_covid_paper_code/: scheduling_v6
dylan_data/: README_RUNNING_DYLAN.md  RUN_CPLEX_CHECKLIST.md  convert_dylan_to_dp.py  data_utils.py  explore_dylan_data.py  model.py  requirements_dylan.txt  run_cplex_simple.py  run_dylan_notebook.sh  visualize_comparison.py
include/: scheduling.h  scheduling_test.h  utils.h
old_files/: scheduling_CS_old.h
scripts/: plot_schedules.py
src/: main.c  scheduling.c  utils.c
testing/: testing_check.py  validate_outputs.py
testing_latest/: MULTI_DAY_TESTING_README.md  QUICK_START.md  batch_scale_check.py  charging_participation.py  charging_participation_simple.py  create_test_data_for_individual.ipynb  multi_day_soc.py  multi_day_testing.py  multi_runs.py  plot_charging_participation.py  random_soc_testing.py  scale_runs_summary.csv  simple_multi_day_example.py  test_dylan.py  testing.py  testing_check.py  testing_check_with_validation.py
tests/: Makefile  README.md  main_slice_cs_test.py  test_dp_group_mapping.py  test_dylan_schedule.py  test_scheduling  test_scheduling.c
(+66 files in other folders)
