[project]
name = "scheduling-optimizer"
version = "0.1.0"
description = "Activity scheduling optimization using dynamic programming with C/Python interface"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Charlotte Savage" }
]
keywords = ["scheduling", "optimization", "dynamic-programming", "activity-scheduling"]

dependencies = [
    "numpy>=2.0.0",
    "pandas>=2.0.0",
    "tqdm>=4.60.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []  # This is a script-based project, not a package

# Project metadata
[project.urls]
Homepage = "https://github.com/yourusername/scheduling-optimizer"
Repository = "https://github.com/yourusername/scheduling-optimizer"

# Build requirements
# Note: This project requires a C compiler (gcc) to build the shared library
# System requirements:
# - GCC compiler (for compiling C code to shared library)
# - Python 3.9+
# - Standard C math library (libm)
